# tx3

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  swap.dot
crates/tx3-bindgen/: Cargo.toml  transactions.ts
crates/tx3-bindgen/src/: gen.rs  golang.rs  lib.rs  main.rs  python.rs  rust.rs  typescript.rs
crates/tx3-bindgen/templates/: golang.hbs  python.hbs  rust.hbs  typescript.hbs
crates/tx3-bitcoin/: Cargo.toml
crates/tx3-bitcoin/src/: compile.rs  lib.rs  resolve.rs
crates/tx3-build/: Cargo.toml
crates/tx3-build/src/: lib.rs
crates/tx3-cardano/: Cargo.toml
crates/tx3-cardano/src/: coercion.rs  lib.rs  resolve.rs
crates/tx3-cardano/src/compile/: asset_math.rs  mod.rs  plutus_data.rs
crates/tx3-cardano/src/ledgers/: mock.rs  u5c.rs
crates/tx3-lang/: Cargo.toml
crates/tx3-lang/src/: analyze.rs  analyzing.rs  applying.rs  ast.rs  cardano.rs  eval.rs  ir.rs  lib.rs  loading.rs  lowering.rs  main.rs  parse.rs  parser.rs  parsing.rs  tx3.pest
crates/tx3-lang/src/cip57/: hello_world.json  parser.rs
crates/tx3-lang/src/eval/: mod.rs
crates/tx3-lang/src/eval/cardano/: asset_math.rs  mod.rs  plutus_data.rs
crates/tx3-lang/tests/: asteria.ast  asteria.tx3  parsing.rs  swap.ast  swap.tx3
crates/tx3-lsp/: Cargo.toml
crates/tx3-lsp/src/: main.rs
crates/tx3-test/: Cargo.toml
crates/tx3-test/src/: main.rs
crates/tx3-vm/: Cargo.toml
crates/tx3-vm/src/: lib.rs
crates/tx3-vm/src/cardano/: asset_math.rs  legacy.rs  mod.rs  plutus_data.rs
crates/tx3-vm/src/cardano/eval/: asset_math.rs  mod.rs  plutus_data.rs
crates/tx3-vm/src/cardano/ledgers/: mock.rs  mod.rs  u5c.rs
docs/: index.md
docs/chain-specific/: _meta.yml  cardano.md  index.md
docs/diagrams/: _meta.yml  index.md
docs/examples/: _meta.yml  index.md
docs/getting-started/: basic-concepts.md  index.md  quick-start.md
docs/language-guide/: _meta.yml  assets.md  chain-specific.md  expressions.md  index.md  parties-policies.md  syntax.md  templates.md  types.md
docs/resolver-protocol/: _meta.yml  index.md
docs/trp/: openrpc.json
e2e/asteria-joystick/.tx3/txpipe/asteria/: cardano-mainnet.env  cip57.json  protocol.tx3  telchar.toml
e2e/faucet-wasm-pack/: Cargo.toml  build.rs
e2e/faucet-wasm-pack/src/: lib.rs
e2e/faucet-wasm-pack/tests/: web.rs
e2e/faucet-web-react/: .env.preprod  .env.preview  faucet.tx3  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
e2e/faucet-web-react/src/: App.tsx  vite-plugin-tx3.ts
e2e/faucet-web-react/tx3/: faucet.tx3  vesting.tx3
e2e/my-dapp/tx3/: vesting.tx3
examples/: asteria.ast  asteria.move_ship.tir  asteria.tx3  bitcoin_miniscript.tx3  buidlr_fest.tx3  cardano_nativescript.tx3  disordered.ast  disordered.tx3  faucet.ast  faucet.claim_with_password.tir  faucet.tx3  jpg.tx3  lang_tour.ast  lang_tour.my_tx.tir  lang_tour.tx3  levvy.simple.tx3  levvy.tx3  order-book.tx3  plutus_addresses.tx3  semantic_errors.tx3  splash.tx3  sundaeswap.tx3  swap.ast  swap.swap.tir  swap.tx3  swap_static.tx3  transfer.ast  transfer.transfer.tir  transfer.tx3  transfer_nft.tx3  vesting.ast  vesting.lock.tir  vesting.tx3  vesting.unlock.tir
specs/trp/: openrpc.json
vscode-tx3/: .gitignore  .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-tx3/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
vscode-tx3/frontend/src/: App.tsx  global.d.ts  index.css  index.tsx
vscode-tx3/frontend/src/components/: Box.tsx  Button.tsx  Input.tsx  Title.tsx  TrpServerForm.tsx  TxForm.tsx
vscode-tx3/frontend/src/components/Form/: index.tsx
vscode-tx3/frontend/src/components/Form/utils/: index.ts  schemas.ts
vscode-tx3/src/: extension.ts
vscode-tx3/syntaxes/: tx3.tmLanguage.json
