[workspace]
resolver = "2"
members = ["crates/tx3-cardano", "crates/tx3-lang", "crates/tx3-test"]

[workspace.package]
publish = true
authors = ["TxPipe"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tx3-lang/tx3"
version = "0.6.0"
keywords = ["blockchain", "cardano", "utxo", "dsl"]
documentation = "https://docs.rs/tx3-lang"
homepage = "https://github.com/tx3-lang/tx3"
readme = "README.md"

[workspace.metadata.release]
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
