[package]
name = "tx3-bindgen"
description = "Bindgen utilities for tx3-lang"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
bincode = "1.3.3"
convert_case = "0.8.0"
hex = "0.4.3"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
tx3-lang = { version = "0.2.0", path = "../tx3-lang" }
clap = { version = "4.5", features = ["derive"] }
handlebars = "6.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
