[package]
name = "tx3-cardano"
version = "0.1.0"
edition = "2021"

[dependencies]
# pallas = { version = "0.32.0" }
pallas = { git = "https://github.com/txpipe/pallas", features = ["phase-two"] }

hex = "0.4.3"
thiserror = "2.0.11"
tx3-lang = { version = "0.1.0", path = "../tx3-lang" }
utxorpc = "0.10.0"
tokio = "1.43.0"
serde = "1.0.218"
trait-variant = "0.1.2"

[dev-dependencies]
