[package]
name = "tx3-cardano"
description = "Cardano compiler for tx3-lang"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
# pallas = { version = "0.32.0" }
# pallas = { git = "https://github.com/txpipe/pallas", features = ["phase-two"] }
pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }

hex = "0.4.3"
thiserror = "2.0.11"
tx3-lang = { path = "../tx3-lang" }
utxorpc = "0.10.0"
tokio = "1.43.0"
serde = "1.0.218"
trait-variant = "0.1.2"

[dev-dependencies]
