[package]
name = "tx3-cardano"
description = "Cardano compiler for tx3-lang protocols"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
pallas = { version = "1.0.0-alpha.2" }
# pallas = { version = "1.0.0-alpha.0", path = "../../../../txpipe/pallas/pallas" }
# pallas = { git = "https://github.com/txpipe/pallas.git" }

hex = "0.4.3"
thiserror = "2.0.11"
tx3-lang = { version = "0.6.0", path = "../tx3-lang" }
utxorpc = "0.10.0"
tokio = "1.43.0"
serde = "1.0.218"
trait-variant = "0.1.2"

[dev-dependencies]
