[package]
name = "tx3-lang"
description = "A DSL for defining protocols that run on UTxO blockchains"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true


[dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
pest = { version = "2.7.15", features = ["miette-error", "pretty-print"] }
pest_derive = "2.7.15"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
hex = "0.4.3"
bincode = "2.0.1"
ropey = "1.6.1"


[dev-dependencies]
assert-json-diff = "2.0.2"
paste = "1.0.15"
serde_json = "1.0.137"
