[package]
name = "faucet"
version = "0.2.0"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
tx3-lang = { path = "../../crates/tx3-lang" }
tx3-cardano = { path = "../../crates/tx3-cardano" }

[dev-dependencies]
hex = "0.4.3"
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[build-dependencies]
tx3-bindgen = { path = "../../crates/tx3-bindgen" }
